--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <section id="timeline" class="anchor row mb-4 d-none d-md-block">
           <div class="col" id="timeline-vis">
-            <h1>My career in a vis</h1>
+            <h1>My career</h1>
             <p>(Hover the mouse on the bars to see details)</p>
           </div>
         </section>
