--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
           <div class="col-sm-2 col-md-3">
             <img src="img/thiago.jpg" alt="Profile picture" class="img-thumbnail rounded-circle">
-            <a href="data/cv.pdf" data-toggle="tooltip" title="Resume">
+            <a href="data/Resumé_title.pdf" data-toggle="tooltip" title="Resume">
               <button class="btn btn-outline-primary" style="border-radius: 50%;">
                 <i class="fa fa-file-pdf-o" aria-hidden="true">
                 </i>
